<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tvVideoTools"
            style="@style/TextViewStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_video_section"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btnCreateMovie"
            style="@style/ButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/txt_make_movie"
            app:layout_constraintEnd_toStartOf="@id/btnResizeVideo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvVideoTools" />

        <Button
            android:id="@+id/btnResizeVideo"
            style="@style/ButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/txt_resize_video"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/btnCreateMovie"
            app:layout_constraintTop_toTopOf="@id/btnCreateMovie" />

        <Button
            android:id="@+id/btnSplitVideo"
            style="@style/ButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/txt_split_video"
            app:layout_constraintEnd_toStartOf="@id/btnTrimVideo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btnCreateMovie" />

        <Button
            android:id="@+id/btnTrimVideo"
            style="@style/ButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/txt_trim_video"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/btnSplitVideo"
            app:layout_constraintTop_toTopOf="@id/btnSplitVideo" />

        <Button
            android:id="@+id/btnTextOnVideo"
            style="@style/ButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/txt_text_on_video"
            app:layout_constraintEnd_toStartOf="@id/btnMergeAudioVideo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btnSplitVideo" />

        <Button
            android:id="@+id/btnMergeAudioVideo"
            style="@style/ButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/txt_merge_audio_video"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/btnTextOnVideo"
            app:layout_constraintTop_toTopOf="@id/btnTextOnVideo" />

        <Button
            android:id="@+id/btnMergeVideos"
            style="@style/ButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="0dp"
            android:text="@string/txt_merge_videos"
            app:layout_constraintEnd_toEndOf="@id/btnTextOnVideo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btnTextOnVideo" />

        <TextView
            android:id="@+id/tvAudioTools"
            style="@style/TextViewStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_audio_section"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btnMergeVideos" />

        <Button
            android:id="@+id/btnTrimAudio"
            style="@style/ButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/txt_trim_audio"
            app:layout_constraintEnd_toStartOf="@id/btnExtractAudio"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvAudioTools" />

        <Button
            android:id="@+id/btnExtractAudio"
            style="@style/ButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/txt_extract_audio"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/btnTrimAudio"
            app:layout_constraintTop_toTopOf="@id/btnTrimAudio" />

        <Button
            android:id="@+id/btnMergeAudio"
            style="@style/ButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="0dp"
            android:text="@string/txt_merge_audio"
            app:layout_constraintEnd_toEndOf="@id/btnTrimAudio"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btnTrimAudio" />

        <TextView
            android:id="@+id/tvImageTools"
            style="@style/TextViewStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/txt_image_section"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btnMergeAudio" />

        <Button
            android:id="@+id/btnVideoToGif"
            style="@style/ButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/txt_video_to_gif"
            app:layout_constraintEnd_toStartOf="@id/btnVideoToImage"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvImageTools" />

        <Button
            android:id="@+id/btnVideoToImage"
            style="@style/ButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/txt_video_to_images"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/btnVideoToGif"
            app:layout_constraintTop_toTopOf="@id/btnVideoToGif" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>